<resources>
    <string name="app_name">Digital Library</string>
    <string name="title_activity_drawer_navigation">DrawerNavigationActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">digital.library@winseslas.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="title_activity_main">Welcome to your digital bookstore</string>
    <string name="paragraph_activity_main">\tWelcome to our digital bookstore, where you can explore and discover a wide selection of digital books for all tastes and ages. Whether you\'re looking for an exciting novel, an educational book, a comic book or a children\'s book, you\'ll find all this and more in our carefully selected collection. With our user-friendly platform, you can easily browse the different categories, discover new authors and add your favorite books to your personal digital library. \tJoin us now and start your reading journey without limits!</string>
    <string name="button_join_us_activity_main">Join us</string>

    <string name="menu_home">@string/title_home</string>
    <string name="menu_gallery">@string/menu_favorites</string>
    <string name="menu_slideshow">@string/menu_search</string>
    <string name="title_activity_bottom_navigation">BottomNavigationActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_login">@string/title_activity_login</string>
    <string name="title_notifications">Notifications</string>

    <string name="menu_favorites">My favorites</string>
    <string name="menu_search">Search</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_about">About</string>
    <string name="menu_login">Login</string>
    <string name="menu_contact">Contact us</string>

    <string name="title_activity_login">@string/action_sign_in</string>
    <string name="sub_title_activity_login">Welcome back</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_up_with_google">Sign Up With Google</string>
    <string name="action_sign_up_with_facebook">Sign Up With Facebook</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <string name="text_sub_title_home">For you</string>
    <string name="text_label">Books that may interest you</string>

    <string-array name="add_book_page_literary_genre">
        <item>Action and Adventure</item>
        <item>Art</item>
        <item>Alternate History</item>
        <item>Autobiography</item>
        <item>Anthology</item>
        <item>Biography</item>
        <item>Chick Lit</item>
        <item>Children\'s</item>
        <item>Classics</item>
        <item>Comic Book</item>
        <item>Coming-of-Age</item>
        <item>Crime</item>
        <item>Drama</item>
        <item>Diary</item>
        <item>Dictionary</item>
        <item>Encyclopedia</item>
        <item>Fairytale</item>
        <item>Fantasy</item>
        <item>Guide</item>
        <item>Health</item>
        <item>History</item>
        <item>Horror</item>
        <item>Humor</item>
        <item>Journal</item>
        <item>Math</item>
        <item>Mystery</item>
        <item>Memoir</item>
        <item>Music</item>
        <item>New Adult</item>
        <item>Poetry</item>
        <item>Paranormal</item>
        <item>Religion</item>
        <item>Romance</item>
        <item>Satire</item>
        <item>Science</item>
        <item>Science Fiction</item>
        <item>Self Help</item>
        <item>Suspense</item>
        <item>Spirituality</item>
        <item>Sports</item>
        <item>Thriller</item>
        <item>Travel</item>
        <item>True Crime</item>
        <item>Westerns</item>
        <item>Other</item>

    </string-array>
    <string name="text_second_section">Literary genre</string>
    <string name="prompt_author">Author</string>

    <string name="prompt_search">Search for a book, an author, etc</string>
    <string name="todo">TODO</string>
    <string name="the_most_recent">The most recent</string>
    <string name="recently_added_books">Recently added books</string>
    <string name="text_about_description">At Digital Library, we are passionate about reading and learning. Our mission is to provide easy and convenient access to a variety of high-quality digital books to facilitate the discovery of new ideas, stories and perspectives. We believe that reading is an endless source of knowledge and entertainment, and we are committed to providing our customers with an enjoyable and hassle-free reading experience. With Digital Library, you can explore a vast selection of digital books, organize your personal library, and access your favorite titles anywhere, anytime.</string>
    <string name="our_partners">Our partners</string>
    <string name="text_about_title">About us</string>

    <string name="partner1">Éditions l\'Harmattan Cameroun</string>
    <string name="partner3">Éditions Clé du savoir</string>
    <string name="partner2">Presses Universitaires d\'Afrique (PUA)</string>
</resources>