<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_baseline_favorite_24"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_baseline_search_24"
            android:title="@string/menu_slideshow" />
        <item
            android:title="@string/menu_profile" >
            <menu>
                <group android:checkableBehavior="single">
                    <item
                        android:id="@+id/nav_dashboard"
                        android:title="@string/title_dashboard"
                        android:icon="@drawable/ic_baseline_account_circle_24"
                        />

                    <item
                        android:id="@+id/nav_login"
                        android:title="@string/menu_login"
                        android:icon="@drawable/ic_baseline_login_24"
                        />
                </group>
            </menu>

        </item>

        <item
            android:id="@+id/nav_contact"
            android:icon="@drawable/ic_baseline_perm_phone_msg_24"
            android:title="@string/menu_contact"/>
    </group>
</menu>