<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.winseslas.refactoring.navigation.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_favorite"
        android:name="com.winseslas.refactoring.navigation.ui.favorite.FavoriteFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_favorite" />

    <fragment
        android:id="@+id/nav_search"
        android:name="com.winseslas.refactoring.navigation.ui.search.SearchFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_search" />

    <fragment
        android:id="@+id/nav_about"
        android:name="com.winseslas.refactoring.navigation.ui.about.AboutFragment"
        android:label="@string/menu_about"
        tools:layout="@layout/fragment_about" />

    <fragment
        android:id="@+id/nav_contact"
        android:name="com.winseslas.refactoring.navigation.ui.contact.ContactFragment"
        android:label="@string/menu_contact"
        tools:layout="@layout/fragment_contact" />

</navigation>