<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/welcome_layout"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:id="@+id/ScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/homePageBooks"
                android:layout_width="142dp"
                android:layout_height="137dp"
                android:layout_gravity="center"
                android:layout_marginTop="50dp"
                android:scaleType="fitXY"
                android:textAlignment="center"
                app:srcCompat="@drawable/books"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/textViewAppName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textAlignment="center"
                android:textSize="32sp"
                android:textStyle="bold|normal"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                />

            <TextView
                android:id="@+id/textViewHomePageTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/title_activity_main"
                android:textAlignment="center"
                android:textColor="@color/yellow"
                android:textSize="20sp"
                android:textStyle="bold" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                app:cardElevation="3dp"
                app:cardCornerRadius="7dp">

                <TextView
                    android:id="@+id/textViewHomePageSubElement"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/activity_vertical_margin"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:layout_marginStart="@dimen/activity_vertical_margin"
                    android:layout_marginBottom="@dimen/activity_vertical_margin"
                    android:textColor="@color/black"
                    android:justificationMode="inter_word"
                    android:text="@string/paragraph_activity_main"
                    android:textStyle="bold"
                    tools:ignore="UnusedAttribute" />

            </androidx.cardview.widget.CardView>

            <Button
                android:id="@+id/getStarting"
                style="@android:style/Widget.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="80sp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="80sp"
                android:layout_marginBottom="40sp"
                android:shadowRadius="13"
                android:background="@drawable/background_get_start"
                android:drawableEnd="@drawable/ic_baseline_arrow_right_alt_24"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:text="@string/button_join_us_activity_main"
                android:textStyle="bold|italic" />


        </LinearLayout>


    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>