<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/item_horizontal_partners"
    android:orientation="vertical"
    android:layout_width="200dp"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/activity_horizontal_margin"
    android:layout_marginTop="@dimen/activity_horizontal_margin"
    android:layout_marginBottom="@dimen/activity_horizontal_margin"
    app:cardElevation="5dp"
    app:cardCornerRadius="@dimen/activity_horizontal_margin">

<!--    android:onClick="onCardClick"-->
<!--    tools:ignore="UsingOnClickInXml"-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_horizontal_margin"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/image_partners"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_lock_open_24"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            android:contentDescription="@string/todo" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="John Doe"
            android:textSize="24sp"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:textStyle="bold" />

        <TextView
            android:layout_marginTop="1dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/prompt_author"
            android:textSize="18sp"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textStyle="bold"
            />

        <TextView
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:textColor="@color/black"
            android:text="Some text that describes me lorem ipsum ipsum lorem."
            android:justificationMode="inter_word"
            tools:ignore="UnusedAttribute" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textStyle="italic|bold"
            android:text="@string/nav_header_subtitle" />

    </LinearLayout>



</androidx.cardview.widget.CardView>
